i have changed to hajara

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 		<div class="sis">
 			<ul>
 				<a href="#">SIS|</a>
-				<a href="#">PMS|</a>
-				<a href="#">CONTACT|</a>
+				<a href="#">HAJARA</a>
+				<a href="#">CONTACT_US|</a>
 			</ul>
 		</div>
 	&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp<img src="images/home_logo_mavi.jpg" width=200 height=100 >
